added leaflet code

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,9 @@ CHANGELOG Town of Gila Bend Mapping Website
 
 ### Version x.x.x (xx/xx/2015)
 
+### Version 1.1.0 (12/30/2015)
+
+* using Leaflet
 
 ### Version 1.0.1 (12/30/2015)
 
