--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,14 @@
 CHANGELOG Town of Gila Bend Mapping Website
 ===========================================
 
+[![Semver](http://img.shields.io/SemVer/2.0.0.png)](http://semver.org/spec/v2.0.0.html)
+
 `Major/Minor/Patch 0.0.0`
+
+1. MAJOR version when you make incompatible API changes.
+2. MINOR version when you add functionality in a backwards-compatible manner.
+3. PATCH version when you make backwards-compatible bug fixes.
+=========================================================================================
 
 ### Version x.x.x (xx/xx/2015)
 
